tests/suite/errors/e04_unknown_struct.rs
// err: unknown struct `Point`

fn main() {
    let p: i32 = Point { x: 1, y: 2 };
}
